# parasite_host_coevolution

./: .gitignore  Cargo.toml  cmd_param  params.conf  params_v2.conf
conf/: params.conf  params_additional_expo.conf  params_bellow_10_secs.conf  params_crush.conf  params_deadly.conf  params_error.conf  params_error_new.conf  params_float_error.conf  params_small.conf  params_test.conf  params_v2.conf  params_v2_bench.conf  params_v3_freeze.conf
docs/: running.md  tmux_help.md
src/: a2d.rs  exposure.rs  host_death_rules.rs  hosts.rs  main.rs  mutations.rs  parasites.rs  qi_calculations.rs  simulation.rs  simulation_pref.rs
src/testing_simulation/: mod.rs  test_death_rules.rs
