[package]
name = "parasite_host_coevolution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
serde_ini = "0.2.0"
serde_derive = "1.0.136"
rand="0.8.5"
futures = "0.3.21"
ndarray = "0.15.4"
ndarray-rand = "0.14.0"
ndarray-parallel = "0.9.1"
rayon = "1.5.2"