[package]
name = "parasite_host_coevolution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = "1.0.136"
serde_ini = "0.2.0"
serde_derive = "1.0.136"
rand = "0.8.5"
futures = "0.3.21"
ndarray = { version = "0.15.4", features = ["rayon"] }
ndarray-rand = "0.14.0"
rayon = "1.5.2"
log = "0.4.16"
log4rs = "1.1.1"
indicatif = { version = "0.17.0-rc.10", features = ["rayon"] }
